fix alignment issues

--- a/styles/FoodCard.module.css
+++ b/styles/FoodCard.module.css
@@ -1,5 +1,5 @@
 .container{
-    width: 28%;
+    width: 23%;
     height: 60vh;
     display: flex;
     flex-direction: column;
@@ -7,7 +7,7 @@
     justify-content: center;
     cursor: pointer;
     background-color: white;
-    margin: 20px;
+    margin: 30px 10px;
     padding-bottom: 15px;
 }
 
@@ -20,6 +20,7 @@
     flex-direction: column;
     box-shadow: rgba(17, 17, 26, 0.1) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 48px;
     border-radius: 12px;
+    height: 80%;
 }
 
 .cardHead{
@@ -37,8 +38,7 @@
 }
 
 .img {
-    border-top-left-radius: 12px;
-    border-top-right-radius: 12px;
+    
 }
 
 .price{
@@ -56,8 +56,7 @@
     background-color: red;
     color: white;
     width: auto;
-    border-radius: 4px;
-    padding: 10px;
+    border-radius: 24px;
     cursor: pointer;
     font-family: inherit;
     outline: none;
