--- a/styles/FoodList.module.css
+++ b/styles/FoodList.module.css
@@ -1,12 +1,11 @@
 .container {
-    padding-top: 100px;
+    padding: 100px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #fff;
+    width: 100%;
 }
-
-
 
 .title{
     font-size: 3em;
@@ -26,9 +25,9 @@
 
 .wrapper{
     width: 100%;
-    padding: 100px;
+    padding: 20px;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
 }
