--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -71,7 +71,7 @@
 }
 
 .logo {
-    border-radius: 5px;
+    
 }
 
 .wrapper {
